"Tapioca Motel" by Bananlizard, plays in the new krampus' workshop structure
"Neo Alkahouse" by Bananlizard, new alternate theme that plays during the raveyard


Other Random Additions:

-Added spooky forest grass walls, cemetery grass walls, and spider grotto grass walls that are sold by the dryad for 10 copper each (like vanilla grass walls)
-Added unsafe catacomb walls that can be obtained by shimmering regular catacomb walls after that respective catacomb layers boss is defeated (daffodil for layer 1 bricks, big bone for layer 2 bricks)
-Added a couple new accessories to the underground spooky forest cabin chests, one for melee and one for ranged
-Added cranberry cans and cranberry juice, functionally identical to healing potions but they auto consume when you fall below half hp and have slightly less potion sickness time
-Added new raveyard vinyls for the individual tracks Graveyard without the G and Neo Alkahouse




~CHANGES TO EXISTING CONTENT~


Items:

-Lowered drop rate of the putty slime pet
-Spooky biome dungeon keys now shimmer into their corresponding chest like vanilla biome keys
-Spooky biome dungeon keys now correctly use the "it has been cursed by a powerful jungle creature" tooltip pre-plantera like vanilla biome keys
-Necronomicon volume II heart projectile now shoots a bit more frequently in all size stages
-Buffed swingable sphider damage from 30 to 35
-Buffed spider egg cannon damage from 16 to 25
-Buffed venomous crossbow damage from 25 to 32, and renamed it to poison crossbow
-Nerfed bulb bomb damage from 52 to 45 and its thorns now deal half the base damage
-Nerfed jerrys book of stinkology damage from 18 to 10
-Nerfed spider stabber damage from 25 to 20, but it now inflicts venom instead of poison
-Nerfed snot ball damage from 60 to 50 and the bouncing projectile no longer does double the damage of the weapon


Accessory Rebalancing/Reworks:
