@@ -2,28 +2,26 @@ using Terraria;
 using Terraria.ID;
 using Terraria.ModLoader;
 
-using Spooky.Content.Tiles.SpookyBiome.Furniture;
-
-namespace Spooky.Content.Tiles.SpookyBiome
+namespace Spooky.Content.Tiles.Cemetery
 {
-    public class SpookyDirtItem : ModItem
+    public class CemeteryDirtWallItem : ModItem
     {
         public override void SetStaticDefaults()
         {
-            Item.ResearchUnlockCount = 100;
+            Item.ResearchUnlockCount = 400;
         }
 
         public override void SetDefaults()
         {
-            Item.DefaultToPlaceableTile(ModContent.TileType<SpookyDirt>());
+            Item.DefaultToPlaceableWall(ModContent.WallType<CemeteryDirtWallSafe>());
             Item.width = 16;
 			Item.height = 16;
         }
 
         public override void AddRecipes()
         {
-            CreateRecipe()
-            .AddIngredient(ModContent.ItemType<SpookyDirtWallItem>(), 4)
+            CreateRecipe(4)
+            .AddIngredient(ModContent.ItemType<CemeteryDirtItem>())
             .AddTile(TileID.WorkBenches)
             .Register();
         }
