@@ -1,29 +1,28 @@
 using Terraria;
 using Terraria.ID;
 using Terraria.ModLoader;
-
-using Spooky.Content.Tiles.SpookyBiome.Furniture;
+using Microsoft.Xna.Framework;
 
 namespace Spooky.Content.Tiles.SpookyBiome
 {
-    public class SpookyDirtItem : ModItem
+    public class SpookyDirtWallItem : ModItem
     {
         public override void SetStaticDefaults()
         {
-            Item.ResearchUnlockCount = 100;
+            Item.ResearchUnlockCount = 400;
         }
 
         public override void SetDefaults()
         {
-            Item.DefaultToPlaceableTile(ModContent.TileType<SpookyDirt>());
+            Item.DefaultToPlaceableWall(ModContent.WallType<SpookyDirtWallSafe>());
             Item.width = 16;
 			Item.height = 16;
         }
 
         public override void AddRecipes()
         {
-            CreateRecipe()
-            .AddIngredient(ModContent.ItemType<SpookyDirtWallItem>(), 4)
+            CreateRecipe(4)
+            .AddIngredient(ModContent.ItemType<SpookyDirtItem>())
             .AddTile(TileID.WorkBenches)
             .Register();
         }
